# claudego

./: .gitignore  BACKLOG.md  Cargo.toml  README.md  install.ps1  install.sh
.superpowers/sdd/: final-fix-report.md
benches/: pty_hot_path.rs  runtime_candidates.rs
docs/superpowers/benchmarks/: 2026-07-12-runtime-candidates.md
docs/superpowers/fixtures/: claude-stream-json-normal.ndjson  claude-stream-json-rate-limit.ndjson  claude-stream-json-session.ndjson
docs/superpowers/plans/: 2026-07-09-claudego-streaming-performance.md  2026-07-10-pty-hot-path-benchmark.md  2026-07-11-pty-benchmark-tmpdir-isolation.md  2026-07-12-end-to-end-streaming-stress-coverage.md  2026-07-12-runtime-reliability-and-performance-hardening.md
docs/superpowers/specs/: 2026-07-10-pty-hot-path-benchmark-design.md  2026-07-11-pty-benchmark-tmpdir-isolation-design.md  2026-07-14-botsitter-multi-harness-design.md
src/: app.rs  claudego.scoop.json  claudego.winget.yaml  cli.rs  harness.rs  install.ps1  install.sh  lib.rs  logging.rs  main.rs  models.rs  monitor.rs  paths.rs  pty_bridge.rs  resume.rs  stream_json.rs  terminal.rs  time_format.rs
src/monitor/: events.rs  formatters.rs  helpers.rs  lifecycle.rs  mod.rs  processing.rs  runtime.rs  startup.rs
src/providers/claude/: cli.rs  mod.rs  reset_time.rs  root.rs  stream.rs  (+1 more)
src/runners/: pty.rs
src/watcher/: files.rs  mod.rs  reset_time.rs  scan.rs
tests/: cli_claude.rs  cli_codex.rs  cli_shared.rs  codex_interactive.rs  diagnostic_privacy.rs  logger_isolation.rs  pty_exit.rs  streaming_stress.rs
tests/support/: mod.rs
(+11 files in other folders)
